--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import { ViewTransitions } from 'astro:transitions';
 import '../styles/animations.css';
 import '../styles/modal.css';
 import '../styles/achievements.css';
+import '../styles/skills.css';
 
 interface Props {
   title: string;
