feat: :sparkles: Mejora la sección de contacto con nuevos componentes y estilos.
Se ha reestructurado la sección de contacto, añadiendo un nuevo componente para las tarjetas de contacto y un icono de correo. Se implementaron estilos específicos para mejorar la presentación y la usabilidad, incluyendo una funcionalidad para copiar el correo electrónico al portapapeles. Además, se han añadido nuevos íconos SVG y se han actualizado los estilos de la sección de contacto.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ import '../styles/animations.css';
 import '../styles/modal.css';
 import '../styles/achievements.css';
 import '../styles/skills.css';
+import '../styles/contact.css';
 
 interface Props {
   title: string;
