feat: :sparkles: Actualiza enlace en la sección de proyectos.
Se ha modificado el enlace en la sección de proyectos, reemplazando el enlace anterior por una URL específica que dirige a un video. Esta actualización mejora la accesibilidad del contenido presentado.

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -194,7 +194,7 @@
           <!-- Botones de acción -->
           <div class="flex gap-2">
             <a
-              href="#"
+              href="https://1drv.ms/v/s!AicuxSiqjs2Yt7wADGTszCkKl1XtVw"
               class="bg-[#3282B8] text-[#BBE1FA] text-sm font-medium py-1.5 px-4 rounded"
               target="_blank"
               rel="noopener noreferrer"
